--- a/website/themes/default/components/header.html
+++ b/website/themes/default/components/header.html
@@ -1,12 +1,14 @@
 <header>
   <div class="header-logo-panel">
     <div class="header-logo">
-      <a href="/">
-        <img src="images/logo-128.png" alt="{{title}} Logo" />
-      </a>
-      <h1>
+      <div class="header-image">
+        <a href="/">
+          <img src="images/logo-128.png" alt="{{title}} Logo" />
+        </a>
+      </div>
+      <div class="header-text">
         <a href="/">{{title}}</a>
-      </h1>
+      </div>
     </div>
   </div>
   <nav>
