--- a/website/themes/default/style.css
+++ b/website/themes/default/style.css
@@ -76,19 +76,20 @@ header {
   vertical-align: middle;
 }
 
-h1 {
+.header-text {
   margin: 0 0 0 20px;
   padding: 0;
   font-size: 24px;
+  font-weight: bold;
   color: #606060;
   line-height: 30px;
 }
 
-h1 a {
+.header-text a {
   color: #606060;
 }
 
-h1 a:hover {
+.header-text a:hover {
   text-decoration: none;
 }
 
@@ -132,18 +133,18 @@ header > nav a:active {
   background-color: #000;
 }
 
-h2 {
+h1 {
   margin: 0;
   padding: 0;
   font-size: 24px;
   color: #606060;
 }
 
-h2 a {
+h1 a {
   color: #606060;
 }
 
-h2 a:hover {
+h1 a:hover {
   text-decoration: none;
 }
 
