Renamed to Koala, Prettier + ESLint, unified headings

--- a/website/themes/default/components/footer.html
+++ b/website/themes/default/components/footer.html
@@ -1,3 +1,5 @@
 <footer>
-  {{title}}<br /><a href="{{url}}">{{url}}</a>
+  <b>{{title}}</b><br />
+  {{subtitle}}<br />
+  <a href="{{url}}">{{url}}</a>
 </footer>
