--- a/website/themes/default/components/header.html
+++ b/website/themes/default/components/header.html
@@ -7,7 +7,12 @@
         </a>
       </div>
       <div class="header-text">
-        <a href="/">{{title}}</a>
+        <div class="header-title">
+          <a href="/">{{title}}</a>
+        </div>
+        <div class="header-subtitle">
+          <a href="/">{{subtitle}}</a>
+        </div>
       </div>
     </div>
   </div>
