--- a/website/themes/default/components/head.html
+++ b/website/themes/default/components/head.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="UTF-8" />
-  <title>{{title}}</title>
+  <title>{{pageTitle}}</title>
   <meta name="robots" content="index, follow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
