--- a/website/themes/default/style.css
+++ b/website/themes/default/style.css
@@ -166,6 +166,12 @@ main > section {
   padding: 20px;
 }
 
+.post-date {
+  font-size: 12px;
+  color: #999999;
+  margin-top: 4px;
+}
+
 main p {
   margin: 20px 0;
 }
