--- a/website/themes/default/components/footer.html
+++ b/website/themes/default/components/footer.html
@@ -1,5 +1,5 @@
 <footer>
   <b>{{title}}</b><br />
   {{subtitle}}<br />
-  <a href="{{url}}">{{url}}</a>
+  <a href="{{url}}/">{{url}}/</a>
 </footer>
