--- a/website/themes/default/components/header.html
+++ b/website/themes/default/components/header.html
@@ -3,7 +3,7 @@
     <div class="header-logo">
       <div class="header-image">
         <a href="/">
-          <img src="images/logo-128.png" alt="{{title}} Logo" />
+          <img src="/images/logo-128.png" alt="{{title}} Logo" />
         </a>
       </div>
       <div class="header-text">
@@ -19,7 +19,7 @@
   <nav>
     <ul>
       {{#each menu}}
-      <li><a href="{{this.url}}">{{this.title}}</a></li>
+      <li><a href="{{url}}">{{title}}</a></li>
       {{/each}}
     </ul>
   </nav>
