--- a/website/themes/default/style.css
+++ b/website/themes/default/style.css
@@ -19,7 +19,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Helvetica Neue", "Calibri", "Ubuntu", "Helvetica", "Arial",
+  font-family: 'Helvetica Neue', 'Calibri', 'Ubuntu', 'Helvetica', 'Arial',
     sans-serif;
 }
 
@@ -146,11 +146,20 @@ h1 {
   color: #606060;
 }
 
-h1 a {
+h2 {
+  margin: 30px 0 0 0;
+  padding: 0;
+  font-size: 20px;
   color: #606060;
 }
 
-h1 a:hover {
+h1 a,
+h2 a {
+  color: #606060;
+}
+
+h1 a:hover,
+h2 a:hover {
   text-decoration: none;
 }
 
@@ -158,7 +167,11 @@ main p {
   color: #606060;
 }
 
-main > section {
+aside,
+main > section,
+.pages,
+.pages-navigation,
+.navigation {
   position: relative;
   max-width: 700px;
   margin: 10px auto;
@@ -166,14 +179,75 @@ main > section {
   padding: 20px;
 }
 
-.post-date {
+.pages > section {
+  margin: 0 0 50px 0;
+}
+
+.post-date, .post-tags {
   font-size: 12px;
   color: #999999;
   margin-top: 4px;
 }
 
+.post-tags-name {
+  display: inline-block;
+}
+
+.post-tags ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+}
+
+.post-tags ul li {
+  margin-left: 5px;
+  display: inline-block;
+}
+
 main p {
   margin: 20px 0;
+}
+
+nav.pages-navigation {
+  margin: 10px auto;
+  border-top: 1px solid #eee;
+  padding: 10px 15px;
+  color: #999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+nav.pages-navigation div.page-previous {
+  text-align: right;
+  min-width: 150px;
+}
+
+nav.pages-navigation div.page-number {
+  text-align: center;
+  padding: 0 50px;
+}
+
+nav.pages-navigation div.page-next {
+  text-align: left;
+  min-width: 150px;
+}
+
+.navigation {
+  margin-top: 50px;
+  border-top: 1px solid #eee;
+  padding: 0;
+}
+
+aside h2 {
+  margin: 0;
+}
+
+aside ul {
+  list-style-type: none;
+  margin: 8px 0 0 0;
+  padding: 0;
 }
 
 footer {
